tests-integration/fixtures/checking/1772564700_derive_eq_simple/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
Proxy :: forall (t :: Type) (@a :: (t :: Type)). Proxy @(t :: Type) (a :: (t :: Type))
MkNoEq :: NoEq
MkContainsNoEq :: NoEq -> ContainsNoEq

Types
Proxy :: forall (t :: Type). (t :: Type) -> Type
NoEq :: Type
ContainsNoEq :: Type

Derived
derive forall (t :: Type) (t1 :: (t :: Type)). Eq (Proxy @(t :: Type) (t1 :: (t :: Type)))
derive Eq ContainsNoEq

Roles
Proxy = [Phantom]
NoEq = []
ContainsNoEq = []

Diagnostics
error[NoInstanceFound]: No instance found for: Eq NoEq
  --> 13:1..13:32
   |
13 | derive instance Eq ContainsNoEq
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
